custom 项目有些更改

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>custom</module>
+        <module>simple</module>
         <module>spring-boot-security-jwt</module>
+        <module>custom-authorization</module>
     </modules>
 
 
